<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="answer_no">Нет</string>
    <string name="answer_yes">Да</string>
    <string name="back_description">Назад</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="question_label">Вопрос:</string>
    <string name="progress_label">2/10</string>
    <string name="rating_question">Рейтинг этого фильма больше чем 9?</string>
    <string name="search_screen_title">Экран поиска</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="media_library_screen_title">Медиатека</string>
    <string name="media_library_favorites_placeholder_text">Ваша медиатека пуста</string>
    <string name="media_library_playlists_placeholder_text">Вы не создали \nни одного плейлиста</string>
    <string name="share_app_text">https://practicum.yandex.ru/</string>
    <string name="share_chooser_title">Поделиться через</string>
    <string name="support_email">armandosov@yandex.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="search_hint">Поиск</string>
    <string name="clear_description">Очистить поиск</string>
    <string name="search_header">Поиск</string>
    <string name="arrow_more">Узнать больше</string>
    <string name="track_cover">Обложка трека</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="error_message_header">Проблемы со связью</string>
    <string name="error_message_body">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="no_album">Альбома нет</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="duration_placeholder_text">0:30</string>
    <string name="duration_placeholder_null">0:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_changes_warning">Все несохраненные данные будут потеряны</string>
    <string name="finish">ДА</string>
    <string name="cancel">НЕТ</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_create_error">Ошибка при создании плейлиста</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="tracks_list">Список треков</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete">Удалить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_confirmation">Хотите удалить плейлист?</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_confirmation">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="add_cover">Добавить обложку</string>
    <string name="playlist_name_placeholder">Введите название</string>
    <string name="playlist_description_placeholder">Введите описание (необязательно)</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_updated">Плейлист %s обновлен</string>
    <string name="playlist_update_error">Ошибка при обновлении плейлиста</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>
