<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_section"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_marginStart="@dimen/margin_icon"
            android:layout_marginTop="@dimen/margin_icon"
            android:layout_marginBottom="@dimen/margin_icon"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_description"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_arrow_24"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_item_vertical">

        <TextView
            style="@style/SettingsText"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            app:thumbTint="@color/switch_thumb_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_icon_vertical">

        <TextView
            style="@style/SettingsText"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/vector_share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contact_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_icon_vertical">

        <TextView
            style="@style/SettingsText"
            android:text="@string/contact_support" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/vector_support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_agreement_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_icon_vertical">

        <TextView
            style="@style/SettingsText"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/vector_arrow_forward" />
    </LinearLayout>

</LinearLayout>
