<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="46dp"
        android:fontFamily="@font/ys_regular"
        android:text="@string/delete_track_confirmation"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textColor="@color/progress_main"
            android:textSize="20sp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/finish"
            android:textColor="@color/progress_main"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>