<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    android:orientation="vertical"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_item_vertical"
        android:layout_marginTop="16dp">

        <TextView
            style="@style/SettingsText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"/>
    </LinearLayout>

    <TextView
        android:id="@+id/layout_share_app"
        style="@style/SettingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/padding_icon_vertical"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/vector_share" />

    <TextView
        android:id="@+id/layout_contact_support"
        style="@style/SettingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/padding_icon_vertical"
        android:text="@string/contact_support"
        app:drawableEndCompat="@drawable/vector_support" />

    <TextView
        android:id="@+id/user_agreement_layout"
        style="@style/SettingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/padding_icon_vertical"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/vector_arrow_forward" />
</LinearLayout>
