<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/back_description"
            android:src="@drawable/ic_back_arrow_24"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ys_medium"
            android:text="@string/search_header"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_background">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_regular"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_search_14"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:drawablePadding="8dp" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/clear_description"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/colorSecondaryVariant" />
    </FrameLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/vector_search"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_regular"
                android:text="@string/button_search"
                android:textColor="@color/blue"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/vector_music"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_regular"
                android:text="@string/button_library"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/vector_settings"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_regular"
                android:text="@string/button_settings"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
