<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_background">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search_14"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:fontFamily="@font/ys_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/clear_description"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/colorSecondaryVariant" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/progress_main"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/history_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ys_medium_500"
            android:gravity="center_horizontal"
            android:text="@string/history_title"
            android:textSize="19sp"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/clear_history_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_medium_500"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/clear_history"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false" />

    <LinearLayout
        android:id="@+id/placeholder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/vector_empty_search" />

        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_regular"
            android:text="@string/nothing_found"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/placeholder_text_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_regular"
            android:gravity="center_horizontal"
            android:paddingHorizontal="24dp"
            android:text="@string/error_message_body"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_medium_500"
            android:text="@string/refresh"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>